Updated release notes, pom.xml version

--- a/hbase/hbase-customwrapper-5.0/RELEASE_NOTES.txt
+++ b/hbase/hbase-customwrapper-5.0/RELEASE_NOTES.txt
@@ -1,6 +1,9 @@
+20131018
+========
+- Fixed escaping of special characters in LIKE operations, in order to correctly 
+  generate an equivalent regular expression.
+
+
 20131009
 ========
 - Fixed 'let' filter by row_key
-20131018
-========
-- Fixed "escaping" of special characters in the LIKE Query, to can build a equivalent REGEXP to the LIKE
