- Fixed returning result when a query by rowkey is empty, and comments log added

--- a/hbase/hbase-customwrapper-5.0/RELEASE_NOTES.txt
+++ b/hbase/hbase-customwrapper-5.0/RELEASE_NOTES.txt
@@ -1,3 +1,7 @@
+20131021
+========
+- Fixed returning result when a query by rowkey is empty, and comments log added
+
 20131018
 ========
 - Fixed escaping of special characters in LIKE operations, in order to correctly 
