-Fixed operators is_null and is_not_null -Added hbase shell query in the log and in the execution trace -Undelegating operator <,<,<=,>=

--- a/hbase/hbase-customwrapper-5.0/RELEASE_NOTES.txt
+++ b/hbase/hbase-customwrapper-5.0/RELEASE_NOTES.txt
@@ -2,6 +2,7 @@
 ========
 -Fixed operators is_null and is_not_null
 -Added hbase shell query in the log and in the execution trace
+-Undelegating the operators GE, GT, LE, LT because of there isn´t numeric comparator in HBase
 
 20131025
 ========
