-Fixed comparison the data types distinct to String

--- a/hbase/hbase-customwrapper-5.0/RELEASE_NOTES.txt
+++ b/hbase/hbase-customwrapper-5.0/RELEASE_NOTES.txt
@@ -1,3 +1,7 @@
+20131119
+========
+-Fixed comparison the data types distinct to String
+
 20131114
 ========
 -Added possibility to activate cache in the scan
