- #24247: Add stop capabilities to HDFS wrappers
- #24285: WebHDFS wrapper should handle key/value pairs as HDFS delimited files
  wrapper

--- a/hdfs/hdfs-customwrapper-5.5/RELEASE_NOTES.txt
+++ b/hdfs/hdfs-customwrapper-5.5/RELEASE_NOTES.txt
@@ -1,3 +1,8 @@
+CURRENT
+-------
+- #24247 - Add STOP capabilites to the HDFSFileWrapper.
+- #24285 - WebHDFSFileWrapper should handle key/value as HDFSDelimitedTextFileWrapper
+
 20140922
 --------
 - Created first version of this component for Denodo 5.5
