--- a/mapreduce/mapreduce-customwrapper-5.5/RELEASE_NOTES.txt
+++ b/mapreduce/mapreduce-customwrapper-5.5/RELEASE_NOTES.txt
@@ -1,3 +1,7 @@
+20160121
+-------
+- #24093 - Add support for delimited files.
+
 20140922
 --------
 - Created first version of this component for Denodo 5.5
