--- a/hbase/hbase-customwrapper-5.5/RELEASE_NOTES.txt
+++ b/hbase/hbase-customwrapper-5.5/RELEASE_NOTES.txt
@@ -1,6 +1,8 @@
-20160607
+20160608
 ========
--Updated bersion habse to 1.2.1 and hadoop to 2.7.1
+ - Updated version of the HBase client libraries to 1.2.1 and hadoop general
+   client libraries to 2.7.1. Adopted new HBase-1.0 interfaces: Table, 
+   Connection, etc.
 
 20160524
 ========
