Fixed path configuration file

--- a/hbase/hbase-customwrapper-5.0/RELEASE_NOTES.txt
+++ b/hbase/hbase-customwrapper-5.0/RELEASE_NOTES.txt
@@ -1,6 +1,10 @@
+20160627
+========
+ -Fixed path configuration file
+
 20160607
 ========
--Updated bersion habse to 1.2.1 and hadoop to 2.7.1
+-Updated version habse to 1.2.1 and hadoop to 2.7.1
 
 20160524
 ========
