--- a/hbase/hbase-customwrapper-6.0/RELEASE_NOTES.txt
+++ b/hbase/hbase-customwrapper-6.0/RELEASE_NOTES.txt
@@ -1,3 +1,7 @@
+20160627
+========
+ - Fixed path configuration file
+
 20160608
 ========
  - Updated version of the HBase client libraries to 1.2.1 and hadoop general
