--- a/hbase/hbase-customwrapper-5.5/RELEASE_NOTES.txt
+++ b/hbase/hbase-customwrapper-5.5/RELEASE_NOTES.txt
@@ -1,3 +1,7 @@
+20160719
+========
+- Fixed #28268 - Kerberos authentication issue in nested parallel join
+
 20160627
 ========
  - Fixed path configuration file
