--- a/hdfs/hdfs-customwrapper-5.0/RELEASE_NOTES.txt
+++ b/hdfs/hdfs-customwrapper-5.0/RELEASE_NOTES.txt
@@ -1,3 +1,8 @@
+20170109
+--------
+- #28380 - Apply fixes on Kerberos authentication mechanism.
+- #28381 - Update Hadoop client libraries.
+
 20160121
 -------
 - #24093 - Add support for delimited files.
