Add #28321, #28382, #30685:Upgrade Hadoop versions
Add #30670: Apply fixes on Kerberos auth mechanism

--- a/hbase/hbase-customwrapper-5.0/RELEASE_NOTES.txt
+++ b/hbase/hbase-customwrapper-5.0/RELEASE_NOTES.txt
@@ -1,3 +1,7 @@
+20170111
+========
+- Added #30685 - Upgrade versions of client libraries.
+
 20160719
 ========
 - Fixed #28268 - Kerberos authentication issue in nested parallel join
