--- a/hdfs/hdfs-customwrapper-5.0/RELEASE_NOTES.txt
+++ b/hdfs/hdfs-customwrapper-5.0/RELEASE_NOTES.txt
@@ -1,3 +1,7 @@
+20170214
+--------
+- #31223 - Specify custom core-site.xml and/or hdfs-site.xml in the wrapper view configuration.
+
 20170111
 --------
 - #28380 - Apply fixes on Kerberos authentication mechanism.
