Fixed differences in dependencies for HDFS-6.0, updated version, user manuals, release notes

--- a/hdfs/hdfs-customwrapper-5.5/RELEASE_NOTES.txt
+++ b/hdfs/hdfs-customwrapper-5.5/RELEASE_NOTES.txt
@@ -1,6 +1,10 @@
+20170309
+--------
+- #31548 - Fixed wrong set of dependencies being added to the uberjar
+
 20170307
 --------
--Added - #30738 - Add support for Parquet files
+- #30738 - Added support for Parquet files
 
 20170214
 --------
