Add#37872:Parquet files:support for DATE & DECIMAL

--- a/hdfs/hdfs-customwrapper-5.0/RELEASE_NOTES.txt
+++ b/hdfs/hdfs-customwrapper-5.0/RELEASE_NOTES.txt
@@ -1,3 +1,8 @@
+CURRENT
+-------
+- #37872 - Parquet files: add suport for DATE and DECIMAL types
+
+
 20170307
 --------
 -Added - #30738 - Add support for Parquet files
