--- a/hdfs/hdfs-customwrapper-6.0/RELEASE_NOTES.txt
+++ b/hdfs/hdfs-customwrapper-6.0/RELEASE_NOTES.txt
@@ -1,6 +1,7 @@
 CURRENT
 -------
 - #37872 - Parquet files: add suport for DATE and DECIMAL types
+- #37987 - Read files recursively in HDFS wrapper
 
 20170309
 --------
