--- a/hdfs/hdfs-customwrapper-5.0/RELEASE_NOTES.txt
+++ b/hdfs/hdfs-customwrapper-5.0/RELEASE_NOTES.txt
@@ -7,7 +7,7 @@ CURRENT
 - #33125 - Create a Doc appendix explicitly explaining how to use the Hadoop vendor's own client libs
 - #37754 - Add support for '\t' as separator for TAB's instead of using the TAB space as value for separator
 - #39559 - Deprecate WebHDFSFileWrapper
-
+- #38339 - Add support for S3A in the HDFS wrapper
 
 20170307
 --------
