--- a/hdfs/hdfs-customwrapper-6.0/RELEASE_NOTES.txt
+++ b/hdfs/hdfs-customwrapper-6.0/RELEASE_NOTES.txt
@@ -1,3 +1,7 @@
+CURRENT
+-------
+- #40060 - File name pattern explanation is misleading
+
 20181008
 -------
 - #39744 - Rebranding of the HDFS wrapper
