--- a/hdfs/hdfs-customwrapper-7.0/RELEASE_NOTES.txt
+++ b/hdfs/hdfs-customwrapper-7.0/RELEASE_NOTES.txt
@@ -1,3 +1,8 @@
+
+CURRENT
+-------
+- #40114 - Update manual mentioning the need to increase the JVM's heap space for Admin Tool
+
 20181024
 --------
 - #40060 - File name pattern explanation is misleading
