--- a/hdfs/hdfs-customwrapper-6.0/RELEASE_NOTES.txt
+++ b/hdfs/hdfs-customwrapper-6.0/RELEASE_NOTES.txt
@@ -2,6 +2,7 @@ CURRENT
 -------
 - #40114 - Update manual mentioning the need to increase the JVM's heap space for Admin Tool
 - #40062 - Include a class similar to the file system wrapper to list files in a bucket
+- #40578 - Configure null-values in DFS Delimited Text File Wrapper
 
 20181024
 --------
