--- a/hdfs/hdfs-customwrapper-7.0/RELEASE_NOTES.txt
+++ b/hdfs/hdfs-customwrapper-7.0/RELEASE_NOTES.txt
@@ -5,6 +5,7 @@
 - #40061 - Include support for Google Storage
 - #40578 - Configure null-values in DFS Delimited Text File Wrapper
 - #40601 - Make CSV parser more lenient allowing the wrapper to recover from parsing errors
+- #40673 - Error executing a wrapper without Kerberos after a kerberized one
 
 20181024
 --------
