Fix#40675:Skip BOM in delimited files

--- a/hdfs/hdfs-customwrapper-7.0/RELEASE_NOTES.txt
+++ b/hdfs/hdfs-customwrapper-7.0/RELEASE_NOTES.txt
@@ -6,6 +6,7 @@
 - #40578 - Configure null-values in DFS Delimited Text File Wrapper
 - #40601 - Make CSV parser more lenient allowing the wrapper to recover from parsing errors
 - #40673 - Error executing a wrapper without Kerberos after a kerberized one
+- #40675 - Skip BOM in delimited files
 
 20181024
 --------
