Fix#41229:Error joining files residing in the
same hadoop filesystem

--- a/hdfs/hdfs-customwrapper-7.0/RELEASE_NOTES.txt
+++ b/hdfs/hdfs-customwrapper-7.0/RELEASE_NOTES.txt
@@ -1,3 +1,7 @@
+20190109
+-------
+- #41229 - Error joining files residing in the same hadoop filesystem
+
 20181121
 -------
 - #40114 - Update manual mentioning the need to increase the JVM's heap space for Admin Tool
