--- a/hdfs/hdfs-customwrapper-6.0/RELEASE_NOTES.txt
+++ b/hdfs/hdfs-customwrapper-6.0/RELEASE_NOTES.txt
@@ -1,3 +1,7 @@
+current version
+-------
+#41615 - Added profile errorprone to execute error prone
+
 20181121
 -------
 - #40114 - Update manual mentioning the need to increase the JVM's heap space for Admin Tool
