--- a/hdfs/hdfs-customwrapper-5.0/RELEASE_NOTES.txt
+++ b/hdfs/hdfs-customwrapper-5.0/RELEASE_NOTES.txt
@@ -1,3 +1,7 @@
+20190212
+--------
+- #41819 - Issue converting INT96 and FIXED_LEN_BYTE_ARRAY Parquet types to VDP types
+
 20190109
 -------
 - #41229 - Error joining files residing in the same hadoop filesystem
