--- a/hdfs-customwrapper/RELEASE_NOTES.txt
+++ b/hdfs-customwrapper/RELEASE_NOTES.txt
@@ -1,3 +1,7 @@
+20190429
+--------
+- #42932 - Duplicated records when reading Parquet files
+
 20190416
 --------
 - #42277 - Issue detecting binary fields in avro files
