--- a/hdfs-customwrapper/RELEASE_NOTES.txt
+++ b/hdfs-customwrapper/RELEASE_NOTES.txt
@@ -1,3 +1,7 @@
+20190608
+--------
+- #42877 - Support compressed delimited files
+
 20190429
 --------
 - #42932 - Duplicated records when reading Parquet files
