--- a/hdfs-customwrapper/RELEASE_NOTES.txt
+++ b/hdfs-customwrapper/RELEASE_NOTES.txt
@@ -1,3 +1,7 @@
+20190814
+--------
+- #44403 - Add the denodo-hadoop-commons source file
+
 20190805
 --------
 - #44168 - Add FTP/SFTP file ability for core-site.xml and hdfs-site.xml files
