--- a/hdfs-customwrapper/RELEASE_NOTES.txt
+++ b/hdfs-customwrapper/RELEASE_NOTES.txt
@@ -1,3 +1,10 @@
+20191119
+--------
+- #45469 - Add "IAM Role to Assume" to Parquet/S3 wrapper
+- #45470 - Improve the tooltip of the "Endpoint" parameter in the Parquet/S3 wrapper
+- #45700 - Optimization in the reading of parquet types excluding condition fields
+- #45708 - Update hadoop-common version to 3.2.1
+
 20190829
 --------
 - #44505 - Feature to include a column in base view to store the filenames
