Add#44669 - Feature to change the data type of size field when using DFSListFilesWrapper

--- a/hdfs-customwrapper/RELEASE_NOTES.txt
+++ b/hdfs-customwrapper/RELEASE_NOTES.txt
@@ -1,3 +1,8 @@
+20200213
+--------
+- #46212 - Add multithread support in parquet readings
+- #44669 - DFSListFilesWrapper:change the data type of size field
+
 20191119
 --------
 - #45469 - Add "IAM Role to Assume" to Parquet/S3 wrapper
