Fix#46837:GC Error reading file with blank in name
Update GCS connector version: it changed the default value of
fs.gs.path.encoding to 'uri-path'

--- a/hdfs-customwrapper/RELEASE_NOTES.txt
+++ b/hdfs-customwrapper/RELEASE_NOTES.txt
@@ -1,6 +1,7 @@
 20200213
 --------
 - #46212 - Add multithread support in parquet readings
+- #46837 - Google Cloud: Error reading files with white spaces in the file name
 
 20191119
 --------
