--- a/hdfs-customwrapper/RELEASE_NOTES.txt
+++ b/hdfs-customwrapper/RELEASE_NOTES.txt
@@ -1,3 +1,7 @@
+CURRENT
+-------
+- #47337 - Support for Hive-style partitioning of Parquet datasets
+
 20200213
 --------
 - #46212 - Add multithread support in parquet readings
