--- a/hdfs-customwrapper/RELEASE_NOTES.txt
+++ b/hdfs-customwrapper/RELEASE_NOTES.txt
@@ -1,3 +1,8 @@
+20200317
+--------
+- #47575 - Unable to load Denodo Distributed File System Custom Wrapper in Denodo 6.0
+- #47586 - Parquet: parallelism by row group is not supported in Denodo 6.0
+
 20200309
 --------
 - #47337 - Support for Hive-style partitioning of Parquet datasets
