First release for Denodo 8

--- a/hdfs-customwrapper/RELEASE_NOTES.txt
+++ b/hdfs-customwrapper/RELEASE_NOTES.txt
@@ -1,88 +1,3 @@
-20200402
+20200506
 --------
-- #47711 - Feature to configure the encoding of files on AWS S3 using HDFS custom wrapper
-- #44973 - HDFS Parquet file wrapper issue due to not trim() input field
-- #44891 - Support delimiters of multiple characters in the HDFSDelimitedTextFileWrapper
-
-20200309
---------
-- #47337 - Support for Hive-style partitioning of Parquet datasets
-
-20200213
---------
-- #46212 - Add multithread support in parquet readings
-- #46837 - Google Cloud: Error reading files with white spaces in the file name
-- #44669 - DFSListFilesWrapper:change the data type of size field
-
-20191119
---------
-- #45469 - Add "IAM Role to Assume" to Parquet/S3 wrapper
-- #45470 - Improve the tooltip of the "Endpoint" parameter in the Parquet/S3 wrapper
-- #45472 - Divide configuration between DataSource and Base View
-- #45700 - Optimization in the reading of parquet types excluding condition fields
-- #45708 - Update hadoop-common version to 3.2.1
-
-20191024
---------
-- #44063 - Refresh state of the parquet libraries. Add predicate pushdown and projections delegation. Create the S3ParquetFileWrapper
-
-20190829
---------
-- #44505 - Feature to include a column in base view to store the filenames
-
-20190814
---------
-- #44403 - Add the denodo-hadoop-commons source file
-
-20190805
---------
-- #44168 - Add FTP/SFTP file ability for core-site.xml and hdfs-site.xml files
-- #44020 - Take advantage of Route objects when reading xml files
-- #43383 - Documentation: Note the need to escape special characters in configured paths
-- #43230 - Documentation: Document S3 Temporary Credentials configuration
-
-20190508
---------
-- #42877 - Support compressed delimited files
-
-20190429
---------
-- #42932 - Duplicated records when reading Parquet files
-
-20190416
---------
-- #42277 - Issue detecting binary fields in avro files
-- #42266 - Support Azure Data Lake Storage Gen2 (abfs)
-
-20190212
---------
-- #41819 - Issue converting INT96 and FIXED_LEN_BYTE_ARRAY Parquet types to VDP types
-- #41615 - Added profile errorprone to execute error prone
-
-20190109
--------
-- #41229 - Error joining files residing in the same hadoop filesystem
-
-20181121
--------
-- #40114 - Update manual mentioning the need to increase the JVM's heap space for Admin Tool
-- #40062 - Include a class similar to the file system wrapper to list files in a bucket
-- #40061 - Include support for Google Storage
-- #40578 - Configure null-values in DFS Delimited Text File Wrapper
-- #40601 - Make CSV parser more lenient allowing the wrapper to recover from parsing errors
-- #40673 - Error executing a wrapper without Kerberos after a kerberized one
-- #40675 - Skip BOM in delimited files
-
-20181024
---------
-- #40060 - File name pattern explanation is misleading
-- #40232 - ClassNotFoundException accesing Amazon S3 using IAM Assumed Roles
-
-20181008
--------
-- #39744 - Rebranding of the HDFS wrapper
-- #39931 - Failed connections could require restarting VDP to refresh wrapper configuration files
-
-20181003
---------
-- Created first version of this component for Denodo 7.0
+ - First release for Denodo 8.
